--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,39 +3,39 @@
     <div class="row">
       <div class="col-md-4 mb-3 mb-md-0">
         <h5>StyleShop</h5>
-        <p class="text-muted">Your one-stop shop for stylish men's and women's clothing.</p>
+        <p class="">Your one-stop shop for stylish men's and women's clothing.</p>
       </div>
       <div class="col-md-2 mb-3 mb-md-0">
         <h5>Shop</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a routerLink="/products/men" class="nav-link p-0 text-muted">Men</a></li>
-          <li class="nav-item mb-2"><a routerLink="/products/women" class="nav-link p-0 text-muted">Women</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">New Arrivals</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Sale</a></li>
+          <li class="nav-item mb-2"><a routerLink="/products/men" class="nav-link p-0 ">Men</a></li>
+          <li class="nav-item mb-2"><a routerLink="/products/women" class="nav-link p-0 ">Women</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">New Arrivals</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Sale</a></li>
         </ul>
       </div>
       <div class="col-md-2 mb-3 mb-md-0">
         <h5>Company</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About Us</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Contact</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Careers</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Store Locations</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">About Us</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Contact</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Careers</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Store Locations</a></li>
         </ul>
       </div>
       <div class="col-md-4">
         <h5>Stay Connected</h5>
-        <p class="text-muted">Subscribe to our newsletter for promotions and updates.</p>
+        <p class="">Subscribe to our newsletter for promotions and updates.</p>
         <div class="d-flex gap-2">
           <input type="email" class="form-control" placeholder="Email address">
           <button class="btn btn-primary" type="button">Subscribe</button>
         </div>
         <div class="mt-3">
           <ul class="list-unstyled d-flex gap-3">
-            <li><a href="#" class="text-muted fs-5"><i class="bi bi-facebook"></i></a></li>
-            <li><a href="#" class="text-muted fs-5"><i class="bi bi-twitter"></i></a></li>
-            <li><a href="#" class="text-muted fs-5"><i class="bi bi-instagram"></i></a></li>
-            <li><a href="#" class="text-muted fs-5"><i class="bi bi-pinterest"></i></a></li>
+            <li><a href="#" class=" fs-5"><i class="bi bi-facebook"></i></a></li>
+            <li><a href="#" class=" fs-5"><i class="bi bi-twitter"></i></a></li>
+            <li><a href="#" class=" fs-5"><i class="bi bi-instagram"></i></a></li>
+            <li><a href="#" class=" fs-5"><i class="bi bi-pinterest"></i></a></li>
           </ul>
         </div>
       </div>
@@ -44,8 +44,8 @@
     <div class="d-flex justify-content-between pt-2">
       <p>&copy; 2024 StyleShop. All rights reserved.</p>
       <ul class="list-unstyled d-flex gap-3">
-        <li><a href="#" class="text-muted">Privacy Policy</a></li>
-        <li><a href="#" class="text-muted">Terms of Service</a></li>
+        <li><a href="#" class="">Privacy Policy</a></li>
+        <li><a href="#" class="">Terms of Service</a></li>
       </ul>
     </div>
   </div>
